force-app/main/default/objects/CEP_ApiHttpHeader__mdt/CEP_ApiHttpHeader__mdt.object-meta.xml
<CustomObject>
    <description>The list of Http Headers that are send when invoking the API method. The Header Value is a merge field that can be merged at runtime using the relatedObject or inputFieldMap parameters of the call() API method.</description>
    <label>CEP API Http Header</label>
    <pluralLabel>CEP API Http Headers</pluralLabel>
</CustomObject>