force-app/main/default/objects/CEP_ApiHttpHeader__mdt/fields/ApiMethod__c.field-meta.xml
<CustomField>
    <fullName>ApiMethod__c</fullName>
    <label>API Method</label>
    <referenceTo>CEP_ApiMethod__mdt</referenceTo>
    <relationshipLabel>API Http Headers</relationshipLabel>
    <relationshipName>ApiHttpHeaders</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>