force-app/main/default/objects/CEP_ApiHttpHeader__mdt/fields/HeaderValue__c.field-meta.xml
<CustomField>
    <fullName>HeaderValue__c</fullName>
    <inlineHelpText>Merge field values use the syntax {!fieldName}.</inlineHelpText>
    <label>Header Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>